# task_manager_cli

./: .env  .gitignore  Cargo.toml  Diesel.toml  README.md  WORKLOG.md  task_manager.db
.notes/: notes.db
src/: app.rs  filter_presets.rs  homepage.rs  lib.rs  log_config.rs  main.rs  task_manager.db  ui.rs  ui_style.rs
src/common/: command_palette.rs  logs.rs  mod.rs  palette.rs  tui.rs  widgets.rs
src/db/: mod.rs  schema.rs
src/db/migrations/2025-03-25-033811_create_task_manager_tables/: down.sql  up.sql
src/db/migrations/2025-04-09-000000_create_notes_table/: down.sql  up.sql
src/db/notes/: models.rs  operations.rs
src/db/task_manager/: models.rs  operations.rs
src/homepage/: data.rs  draw.rs  types.rs
src/leadership_tools/: app.rs  mod.rs  ui.rs
src/leadership_tools/app/: helpers.rs  storage.rs  types.rs
src/leadership_tools/ui/: draw.rs  events.rs
src/notes/: app.rs  mod.rs  ui.rs
src/notes/app/: core.rs  files.rs  helpers.rs  notes.rs  presets.rs  types.rs
src/notes/ui/: draw.rs  events.rs
src/task_manager/: app.rs  mod.rs  ui.rs
src/task_manager/app/: core.rs  filters.rs  helpers.rs  special.rs  tasks.rs  types.rs
src/task_manager/ui/: draw.rs  events.rs
tests/: db.rs  notes.rs  task_manager.rs
tests/common/: mod.rs
tests/db/: app_lifecycle.rs
tests/notes/: files.rs  filters.rs  links.rs  notes.rs  templates.rs
tests/task_manager/: filters.rs  forms.rs  presets.rs
~/.task_manager/: task_manager.db
